Initial skeleton of users table #4

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -22,7 +22,7 @@
 
 {% if user.super_admin %}
     <h2>Super-Admin Controls</h2>
-    <p><a href="/users">View/edit users</a></p>
+    <p><a href="/admin/users">View/edit users</a></p>
 {% end %}
 
 {% end %}
