Complete user management UI #4

--- a/templates/updatedetails.html
+++ b/templates/updatedetails.html
@@ -5,7 +5,7 @@
 <p>Updating details for {{ user.username }}</p>
 <form method="post">
     <h2>Username</h2>
-    <input type="text" name="username" value="{{ user.username }}" placeholder="username" required><br>
+    <input type="text" name="username" value="{{ user.username }}" placeholder="Username" required><br>
 
     <h2>Password</h2>
     <p>Updating your password is optional. Leave the fields blank if you do not wish to change your password.</p>
