--- a/templates/adminusers.html
+++ b/templates/adminusers.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1>User Management</h1>
+<h1>Manage Users</h1>
 
 <table>
     <thead>
@@ -17,19 +17,51 @@
     <tbody>
     {% for user in users %}
         <tr>
-            <td><input type="hidden" name="id" value="{{ user.id }}" required />
-                <input type="text" name="username" value="{{ user.username }}" required />
+            <td><input form="form{{ user.id }}" type="hidden" name="id" value="{{ user.id }}" required />
+                <input form="form{{ user.id }}" type="text" name="username" value="{{ user.username }}" required />
                 {% if user.username == current_user.username %}&nbsp;(you){% end %}</td>
-            <td><input type="password" name="password" placeholder="(leave blank if no change)" /></td>
-            <td><input type="text" name="email" value="{{ user.email }}" required /></td>
-            <td><input type="checkbox" name="super_admin" value="true" {% if user.super_admin %}checked{% end %}></td>
+            <td><input form="form{{ user.id }}" type="password" name="password" placeholder="(leave blank if no change)" /></td>
+            <td><input form="form{{ user.id }}" type="text" name="email" value="{{ user.email }}" required /></td>
+            <td><input form="form{{ user.id }}" type="checkbox" name="super_admin" value="true"
+                       {% if user.super_admin %}checked{% end %}
+                       {% if user.username == current_user.username %}disabled{% end %}></td>
             <td>{{ user.created_at.strftime("%d %B %Y") }}</td>
-            <td>Update
-                {% if user.username != current_user.username %}
-                    Delete
-                {% end %}</td>
+            <td>
+                <form id="form{{ user.id }}" method="post">
+                    <input type="submit" name="action" value="Update" />
+                    {% if user.username != current_user.username %}
+                        <input type="submit" name="action" value="Delete" />
+                    {% end %}
+                </form>
+            </td>
         </tr>
     {% end %}
+    <tr><td colspan=6>&nbsp;</td></tr>
+    <tr>
+        <th colspan=6>
+            <strong>New User</strong>
+        </th>
+    </tr>
+    <tr>
+        <th>Username</th>
+        <th>Password</th>
+        <th>Email Address</th>
+        <th>Super-Admin?</th>
+        <th></th>
+        <th></th>
+    </tr>
+    <tr>
+        <td><input form="form-new" type="text" name="username"  placeholder="Username" required /></td>
+        <td><input form="form-new" type="password" name="password" placeholder="Password" required /></td>
+        <td><input form="form-new" type="text" name="email" placeholder="Email Address" required /></td>
+        <td><input form="form-new" type="checkbox" name="super_admin" value="true"></td>
+        <td></td>
+        <td>
+            <form id="form-new" method="post">
+                <input type="submit" name="action" value="Create" />
+            </form>
+        </td>
+    </tr>
     </tbody>
 </table>
 
