Formatting and warning tweaks

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -4,11 +4,14 @@
 <h1>Admin Dashboard</h1>
 
 {% if insecure_user_present %}
-    {% if user.username == "admin" %}
-        <p><strong>Warning: Your account has username "admin" and password "password". This is not secure. Please <a href="/updatedetails">fix this</a> as soon as possible by setting a different username, setting and secure password, and providing a valid email address.</strong></p>
-    {% else %}
-        <p><strong>Warning: This site has a user with username "admin" and password "password". This is not secure. Please fix this as soon as possible by deleting the "admin" user.</strong></p>
-    {% end %}
+{% if user.username == "admin" %}
+<p><strong>Warning: Your account has username "admin" and password "password". This is not secure. Please <a
+        href="/updatedetails">fix this</a> as soon as possible by setting a different username, setting and secure
+    password, and providing a valid email address.</strong></p>
+{% else %}
+<p><strong>Warning: This site has a user with username "admin" and password "password". This is not secure. Please fix
+    this as soon as possible by deleting the "admin" user.</strong></p>
+{% end %}
 {% end %}
 
 <p>Hello {{ user.username }}</p>
@@ -21,8 +24,8 @@
 <p>...</p>
 
 {% if user.super_admin %}
-    <h2>Super-Admin Controls</h2>
-    <p><a href="/admin/users">Manage users</a></p>
+<h2>Super-Admin Controls</h2>
+<p><a href="/admin/users">Manage users</a></p>
 {% end %}
 
 {% end %}
