--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,8 @@
     <meta property="og:title" content="YouthMap"/>
     <meta property="twitter:title" content="YouthMap"/>
     <meta name="description" content="Map for YOTA, JOTA and other Amateur Radio events involving young people."/>
-    <meta property="og:description" content="Map for YOTA, JOTA and other Amateur Radio events involving young people."/>
+    <meta property="og:description"
+          content="Map for YOTA, JOTA and other Amateur Radio events involving young people."/>
     <!-- TODO URLS
     <link rel="canonical" href=""/>
     <meta property="og:url" content=""/>
@@ -48,10 +49,10 @@
 
 </head>
 <body>
-    <nav id="header">
-    </nav>
-    <main>
-        {% block content %}{% end %}
-    </main>
+<nav id="header">
+</nav>
+<main>
+    {% block content %}{% end %}
+</main>
 </body>
 </html>
