--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,8 @@
 <h1>Admin Login</h1>
 
 {% if insecure_user_present %}
-    <p><strong>The default login is username "admin", password "password". Please ensure this user is renamed or replaced before this site goes live.</strong></p>
+<p><strong>The default login is username "admin", password "password". Please ensure this user is renamed or replaced
+    before this site goes live.</strong></p>
 {% end %}
 
 <form method="post">
