--- a/templates/updatedetails.html
+++ b/templates/updatedetails.html
@@ -14,7 +14,8 @@
     <input type="password" name="new_password_2" placeholder="New Password (again)"><br>
 
     <h2>Email Address</h2>
-    <input type="text" name="email" value="{{ user.email if user.email != 'None' else '' }}" placeholder="me@example.com" required><br>
+    <input type="text" name="email" value="{{ user.email if user.email != 'None' else '' }}"
+           placeholder="me@example.com" required><br>
 
     <p></p>
     <input type="submit" value="Update">
