HTML layout tweaks

--- a/templates/adminusers.html
+++ b/templates/adminusers.html
@@ -13,6 +13,7 @@
         <th>Super-Admin?</th>
         <th>Created</th>
         <th>Controls</th>
+        <th></th>
     </tr>
     </thead>
     <tbody>
@@ -20,7 +21,6 @@
     <tr>
         <td><input form="form{{ user.id }}" type="hidden" name="id" value="{{ user.id }}" required/>
             <input form="form{{ user.id }}" type="text" name="username" value="{{ user.username }}" required/>
-            {% if user.username == current_user.username %}&nbsp;(you){% end %}
         </td>
         <td><input form="form{{ user.id }}" type="password" name="password" placeholder="(leave blank if no change)"/>
         </td>
@@ -37,13 +37,14 @@
                 {% end %}
             </form>
         </td>
+        <td>{% if user.username == current_user.username %}&nbsp;&larr;you{% end %}</td>
     </tr>
     {% end %}
     <tr>
-        <td colspan=6>&nbsp;</td>
+        <td colspan=7>&nbsp;</td>
     </tr>
     <tr>
-        <th colspan=6>
+        <th colspan=7>
             <strong>New User</strong>
         </th>
     </tr>
@@ -52,6 +53,7 @@
         <th>Password</th>
         <th>Email Address</th>
         <th>Super-Admin?</th>
+        <th></th>
         <th></th>
         <th></th>
     </tr>
@@ -66,6 +68,7 @@
                 <input type="submit" name="action" value="Create"/>
             </form>
         </td>
+        <td></td>
     </tr>
     </tbody>
 </table>
