--- a/templates/login.html
+++ b/templates/login.html
@@ -9,8 +9,8 @@
 {% end %}
 
 <form method="post">
-    <input type="text" name="username" placeholder="Username" required autofocus><br>
-    <input type="password" name="password" placeholder="Password" required><br>
+    <label for="username">Username: </label> <input type="text" id="username" name="username" required autofocus><br>
+    <label for="password">Password: </label> <input type="password" id="password" name="password" required><br>
     <input type="submit" value="Login">
 </form>
 
