Skeleton of event management page

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -21,7 +21,7 @@
 <p><a href="/logout">Logout</a></p>
 
 <h2>Admin Controls</h2>
-<p>...</p>
+<p><a href="/admin/events">Manage events</a></p>
 
 {% if user.super_admin %}
 <h2>Super-Admin Controls</h2>
