--- a/templates/map.html
+++ b/templates/map.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
+<!--suppress HtmlUnknownTarget -->
 <h1>Youth Map</h1>
 <p>Map here</p>
 <a href="/login">Admin login</a>
