--- a/templates/adminusers.html
+++ b/templates/adminusers.html
@@ -1,77 +1,18 @@
 {% extends "base.html" %}
 {% block content %}
 
-<!--suppress HtmlUnknownAttribute, HtmlFormInputWithoutLabel -->
+<!--suppress HtmlUnknownAttribute, HtmlFormInputWithoutLabel, HtmlUnknownTarget -->
 <h1>Manage Users</h1>
 
-<table>
-    <thead>
-    <tr>
-        <th>Username</th>
-        <th>Password</th>
-        <th>Email Address</th>
-        <th>Flags</th>
-        <th>Controls</th>
-        <th></th>
-    </tr>
-    </thead>
-    <tbody>
+<p>Click on a user to update or delete it.</p>
+
+<ul>
     {% for user in users %}
-    <tr>
-        <td><input form="form{{ user.id }}" type="hidden" name="id" value="{{ user.id }}" required/>
-            <input form="form{{ user.id }}" type="text" name="username" value="{{ user.username }}" required/>
-        </td>
-        <td><input form="form{{ user.id }}" type="password" name="password" placeholder="(leave blank if no change)"/>
-        </td>
-        <td><input form="form{{ user.id }}" type="text" name="email" value="{{ user.email }}" required/></td>
-        <td><input form="form{{ user.id }}" type="checkbox" id="super-admin-{{ user.id }}" name="super_admin" value="true"
-                   {% if user.super_admin %}checked{% end %}
-                   {% if user.username== current_user.username %}disabled{% end %}>
-            <label for="super-admin-{{ user.id }}">Super-Admin</label>
-        </td>
-        <td>
-            <form id="form{{ user.id }}" method="post">
-                <input type="submit" name="action" value="Update"/>
-                {% if user.username != current_user.username %}
-                <input type="submit" name="action" value="Delete"/>
-                {% end %}
-            </form>
-        </td>
-        <td>{% if user.username == current_user.username %}&larr; you{% end %}</td>
-    </tr>
+        <li><a href="/admin/user/{{ user.id }}">{{ user.username }}</a></li>
     {% end %}
-    <tr>
-        <td colspan=6>&nbsp;</td>
-    </tr>
-    <tr>
-        <th colspan=6>
-            <strong>New User</strong>
-        </th>
-    </tr>
-    <tr>
-        <th>Username</th>
-        <th>Password</th>
-        <th>Email Address</th>
-        <th>Flags</th>
-        <th></th>
-        <th></th>
-    </tr>
-    <tr>
-        <td><input form="form-new" type="text" name="username" placeholder="Username" required/></td>
-        <td><input form="form-new" type="password" name="password" placeholder="Password" required/></td>
-        <td><input form="form-new" type="text" name="email" placeholder="Email Address" required/></td>
-        <td><input form="form-new" type="checkbox" id="super-admin-new" name="super_admin" value="true">
-            <label for="super-admin-new">Super-Admin</label>
-        </td>
-        <td>
-            <form id="form-new" method="post">
-                <input type="submit" name="action" value="Create"/>
-            </form>
-        </td>
-        <td></td>
-    </tr>
-    </tbody>
-</table>
+</ul>
+
+<p><a href="/admin/user/new">Create new user</a></p>
 
 <p><a href="/admin">Back to dashboard</a></p>
 
