Switch event management to a separate page #7

--- a/templates/adminusers.html
+++ b/templates/adminusers.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<!--suppress HtmlUnknownAttribute, HtmlFormInputWithoutLabel, HtmlUnknownTarget -->
+<!--suppress HtmlUnknownTarget -->
 <h1>Manage Users</h1>
 
 <p>Click on a user to update or delete it.</p>
