Skeleton for admin management of stations #8

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -22,6 +22,7 @@
 <p><a href="/logout">Logout</a></p>
 
 <h2>Admin Controls</h2>
+<p><a href="/admin/stations">Manage stations</a></p>
 <p><a href="/admin/events">Manage events</a></p>
 
 {% if user.super_admin %}
