--- a/templates/adminevents.html
+++ b/templates/adminevents.html
@@ -8,7 +8,7 @@
 
 <ul>
     {% for event in events %}
-        <li><a href="/admin/event/{{ event.id }}">{{ event.eventname }}</a></li>
+        <li><a href="/admin/event/{{ event.id }}">{{ event.name }}</a></li>
     {% end %}
 </ul>
 
