--- a/templates/login.html
+++ b/templates/login.html
@@ -11,6 +11,7 @@
 <form method="post">
     <label for="username">Username: </label> <input type="text" id="username" name="username" required autofocus><br>
     <label for="password">Password: </label> <input type="password" id="password" name="password" required><br>
+    <input type="hidden" name="next" value="{{ next }}">
     <input type="submit" value="Login">
 </form>
 
