--- a/templates/adminstationtemp.html
+++ b/templates/adminstationtemp.html
@@ -18,8 +18,10 @@
                                                      value="{{ '' if creating_new else station.club_name }}"
                                                      required/><br/>
     <label for="event">Event (Optional):</label> TODO Event Picker<br/>
-    <label for="start_time">Start Time:</label> TODO Date/Time Picker<br/>
-    <label for="end_time">End Time:</label> TODO Date/Time Picker<br/>
+    <label for="start_time">Start Time (UTC):</label> <input id="start_time" name="start_time" type="datetime-local"
+                                                             value="{{ (datetime.datetime.now() if creating_new else event.start_time).strftime('%Y-%m-%dT%H:%M') }}"/><br/>
+    <label for="end_time">End Time (UTC):</label> <input id="end_time" name="end_time" type="datetime-local"
+                                                             value="{{ (datetime.datetime.now() if creating_new else event.end_time).strftime('%Y-%m-%dT%H:%M') }}"/><br/>
     <label for="latitude_degrees">Latitude:</label> <input type="number" id="latitude_degrees" name="latitude_degrees"
                                                            step="any" min="-90"
                                                            max="90"
