--- a/templates/adminstationperm.html
+++ b/templates/adminstationperm.html
@@ -17,22 +17,23 @@
                                                      value="{{ '' if creating_new else station.club_name }}"
                                                      required/><br/>
     <label for="type">Type:</label> TODO Type Picker<br/>
-    <label for="latitude_degrees">Latitude:</label> <input type="number" id="latitude_degrees" name="latitude_degrees"
-                                                           step="any" min="-90"
-                                                           max="90"
-                                                           value="{{ '' if creating_new else station.latitude_degrees }}"
-                                                           required/><br/>
-    <label for="longitude_degrees">Longitude:</label> <input type="number" id="longitude_degrees"
-                                                             name="longitude_degrees" step="any" min="-180"
-                                                             max="180"
-                                                             value="{{ '' if creating_new else station.longitude_degrees }}"
-                                                             required/><br/>
+    <label for="latitude_degrees">Latitude (degrees):</label> <input type="number" id="latitude_degrees"
+                                                                     name="latitude_degrees"
+                                                                     step="any" min="-90"
+                                                                     max="90"
+                                                                     value="{{ '' if creating_new else station.latitude_degrees }}"
+                                                                     required/><br/>
+    <label for="longitude_degrees">Longitude (degrees):</label> <input type="number" id="longitude_degrees"
+                                                                       name="longitude_degrees" step="any" min="-180"
+                                                                       max="180"
+                                                                       value="{{ '' if creating_new else station.longitude_degrees }}"
+                                                                       required/><br/>
     <label for="meeting_when">Meeting times:</label> <input type="text" id="meeting_when" name="meeting_when"
-                                                                value="{{ '' if creating_new else station.meeting_when }}"/><br/>
+                                                            value="{{ '' if creating_new else station.meeting_when }}"/><br/>
     <label for="meeting_where">Meeting place:</label> <input type="text" id="meeting_where" name="meeting_where"
-                                                                value="{{ '' if creating_new else station.meeting_where }}"/><br/>
+                                                             value="{{ '' if creating_new else station.meeting_where }}"/><br/>
     <label for="notes">Notes (optional):</label> <textarea id="notes" name="notes"
-                                                          rows="5">{{ '' if creating_new else station.notes }}</textarea><br/>
+                                                           rows="5">{{ '' if creating_new else station.notes }}</textarea><br/>
     <label for="website_url">Website (optional):</label> <input type="text" id="website_url" name="website_url"
                                                                 value="{{ '' if creating_new else station.website_url }}"/><br/>
     <label for="qrz_url">QRZ page (optional):</label> <input type="text" id="qrz_url" name="qrz_url"
