--- a/templates/adminevent.html
+++ b/templates/adminevent.html
@@ -17,17 +17,17 @@
     <label for="end_time">End Time (UTC):</label> <input id="end_time" name="end_time" type="datetime-local"
                                                          value="{{ (datetime.datetime.now() if creating_new else event.end_time).strftime('%Y-%m-%dT%H:%M') }}"/><br/>
     Bands:
-    {% for band in all_band_names %}
-    <input type="checkbox" id="band-{{ band.replace('.', '_') }}" name="band_names[]" value="{{ band }}"
-           {% if creating_new or [b.name for b in event.bands] %}checked{% end %}/>
-    <label for="band-{{ band.replace('.', '_') }}">{{ band }}</label>
+    {% for band in all_bands %}
+    <input type="checkbox" id="band-{{ band.id }}" name="bands[]" value="{{ band.id }}"
+           {% if creating_new or band in event.bands %}checked{% end %}/>
+    <label for="band-{{ band.id }}">{{ band.name }}</label>
     {% end %}
     <br/>
     Modes:
-    {% for mode in all_mode_names %}
-    <input type="checkbox" id="mode-{{ mode.replace('.', '_') }}" name="mode_names[]" value="{{ mode }}"
-           {% if creating_new or [m.name for m in event.modes] %}checked{% end %}/>
-    <label for="mode-{{ mode.replace('.', '_') }}">{{ mode }}</label>
+    {% for mode in all_modes %}
+    <input type="checkbox" id="mode-{{ mode.id }}" name="modes[]" value="{{ mode.id }}"
+           {% if creating_new or mode in event.modes %}checked{% end %}/>
+    <label for="mode-{{ mode.id }}">{{ mode.name }}</label>
     {% end %}
     <br/>
     <label for="icon">Icon:</label>
