--- a/templates/adminevent.html
+++ b/templates/adminevent.html
@@ -19,14 +19,14 @@
     Bands:
     {% for band in all_bands %}
     <input type="checkbox" id="band-{{ band.id }}" name="bands[]" value="{{ band.id }}"
-           {% if creating_new or band in event_bands %}checked{% end %}/>
+           {% if creating_new or band.id in [x.id for x in event_bands] %}checked{% end %}/>
     <label for="band-{{ band.id }}">{{ band.name }}</label>
     {% end %}
     <br/>
     Modes:
     {% for mode in all_modes %}
     <input type="checkbox" id="mode-{{ mode.id }}" name="modes[]" value="{{ mode.id }}"
-           {% if creating_new or mode in event_modes %}checked{% end %}/>
+           {% if creating_new or mode.id in [x.id for x in event_modes] %}checked{% end %}/>
     <label for="mode-{{ mode.id }}">{{ mode.name }}</label>
     {% end %}
     <br/>
@@ -70,6 +70,7 @@
 {% end %}
 {% end %}
 
+<p><a href="/admin/events">Back to event list</a></p>
 <p><a href="/admin">Back to dashboard</a></p>
 
 {% end %}
