--- a/templates/adminstationtemp.html
+++ b/templates/adminstationtemp.html
@@ -42,14 +42,14 @@
     Bands:
     {% for band in all_bands %}
     <input type="checkbox" id="band-{{ band.id }}" name="bands[]" value="{{ band.id }}"
-           {% if creating_new or band in station_bands %}checked{% end %}/>
+           {% if creating_new or band.id in [x.id for x in station_bands] %}checked{% end %}/>
     <label for="band-{{ band.id }}">{{ band.name }}</label>
     {% end %}
     <br/>
     Modes:
     {% for mode in all_modes %}
     <input type="checkbox" id="mode-{{ mode.id }}" name="modes[]" value="{{ mode.id }}"
-           {% if creating_new or mode in station_modes %}checked{% end %}/>
+           {% if creating_new or mode.id in [x.id for x in station_bands] %}checked{% end %}/>
     <label for="mode-{{ mode.id }}">{{ mode.name }}</label>
     {% end %}
     <br/>
@@ -72,8 +72,10 @@
     <input type="checkbox" id="approved" name="approved" value="true"
            {% if not creating_new and station.approved %}checked{% end %}>
     <label for="approved">Approved</label><br/>
+    {% if not creating_new %}
     <label for="edit_password">User edit password:</label> <input type="text" id="edit_password" name="edit_password"
                                                                   value="{{ '' if creating_new else station.edit_password }}"/><br/>
+    {% end %}
 
     {% if creating_new %}
     <input type="submit" name="action" value="Create">
@@ -87,6 +89,7 @@
 <p><a href="/admin/event/{{ station.event.id }}">{{ station.event.name }}</a></p>
 {% end %}
 
+<p><a href="/admin/events">Back to station list</a></p>
 <p><a href="/admin">Back to dashboard</a></p>
 
 {% end %}
