Figured out how to get the data for a TemporaryStation or Event's bands/modes/etc in the original query, so removed extra unnecessary lookups. #8

--- a/templates/adminstationperm.html
+++ b/templates/adminstationperm.html
@@ -65,7 +65,7 @@
     {% end %}
 </form>
 
-<p><a href="/admin/events">Back to station list</a></p>
+<p><a href="/admin/stations">Back to station list</a></p>
 <p><a href="/admin">Back to dashboard</a></p>
 
 {% end %}
