--- a/templates/adminevent.html
+++ b/templates/adminevent.html
@@ -19,14 +19,14 @@
     Bands:
     {% for band in all_bands %}
     <input type="checkbox" id="band-{{ band.id }}" name="bands[]" value="{{ band.id }}"
-           {% if creating_new or band.id in [x.id for x in event_bands] %}checked{% end %}/>
+           {% if creating_new or band.id in [x.id for x in event.bands] %}checked{% end %}/>
     <label for="band-{{ band.id }}">{{ band.name }}</label>
     {% end %}
     <br/>
     Modes:
     {% for mode in all_modes %}
     <input type="checkbox" id="mode-{{ mode.id }}" name="modes[]" value="{{ mode.id }}"
-           {% if creating_new or mode.id in [x.id for x in event_modes] %}checked{% end %}/>
+           {% if creating_new or mode.id in [x.id for x in event.modes] %}checked{% end %}/>
     <label for="mode-{{ mode.id }}">{{ mode.name }}</label>
     {% end %}
     <br/>
@@ -59,9 +59,9 @@
 
 {% if not creating_new %}
 <h2>Stations at this event:</h2>
-{% if len(event_stations) > 0 %}
+{% if len(event.stations) > 0 %}
 <ul>
-    {% for station in event_stations %}
+    {% for station in event.stations %}
     <li><a href="/admin/station/temp/{{ station.id }}">{{ station.callsign }} {{ station.club_name }}</a></li>
     {% end %}
 </ul>
