--- a/templates/adminstationtemp.html
+++ b/templates/adminstationtemp.html
@@ -6,7 +6,7 @@
 {% if creating_new %}
 <p>Please enter the details for the new station.</p>
 {% else %}
-<p>Updating details for {{ station.callsign }} {{ station.club_name }}{% if station_event %} at {{ station_event.name
+<p>Updating details for {{ station.callsign }} {{ station.club_name }}{% if station.event %} at {{ station.event.name
     }}{% else %} (SES){% end %}.</p>
 {% end %}
 
@@ -42,14 +42,14 @@
     Bands:
     {% for band in all_bands %}
     <input type="checkbox" id="band-{{ band.id }}" name="bands[]" value="{{ band.id }}"
-           {% if creating_new or band.id in [x.id for x in station_bands] %}checked{% end %}/>
+           {% if creating_new or band.id in [x.id for x in station.bands] %}checked{% end %}/>
     <label for="band-{{ band.id }}">{{ band.name }}</label>
     {% end %}
     <br/>
     Modes:
     {% for mode in all_modes %}
     <input type="checkbox" id="mode-{{ mode.id }}" name="modes[]" value="{{ mode.id }}"
-           {% if creating_new or mode.id in [x.id for x in station_modes] %}checked{% end %}/>
+           {% if creating_new or mode.id in [x.id for x in station.modes] %}checked{% end %}/>
     <label for="mode-{{ mode.id }}">{{ mode.name }}</label>
     {% end %}
     <br/>
@@ -84,12 +84,12 @@
     {% end %}
 </form>
 
-{% if not creating_new and station_event %}
+{% if not creating_new and station.event %}
 <h2>Linked event:</h2>
-<p><a href="/admin/event/{{ station_event.id }}">{{ station_event.name }}</a></p>
+<p><a href="/admin/event/{{ station.event.id }}">{{ station.event.name }}</a></p>
 {% end %}
 
-<p><a href="/admin/events">Back to station list</a></p>
+<p><a href="/admin/stations">Back to station list</a></p>
 <p><a href="/admin">Back to dashboard</a></p>
 
 {% end %}
