Provide the rest of the implementation of temporary station editing for admins #8

--- a/templates/adminstationtemp.html
+++ b/templates/adminstationtemp.html
@@ -14,7 +14,7 @@
     <label for="callsign">Callsign:</label> <input type="text" id="callsign" name="callsign"
                                                    value="{{ '' if creating_new else station.callsign }}"
                                                    required/><br/>
-    <label for="club_name">Club name:</label> <input type="text" id="club_name" name="club_name"
+    <label for="club_name">Club/station name:</label> <input type="text" id="club_name" name="club_name"
                                                      value="{{ '' if creating_new else station.club_name }}"
                                                      required/><br/>
     <label for="event">Event (Optional):</label>
