Start implementation of user frontend #11

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -17,6 +17,8 @@
 
 <p>Hello {{ user.username }}</p>
 
+<p><a href="/">Go to Map</a></p>
+
 <h2>Your Account</h2>
 <p><a href="/admin/user/{{ user.id }}">Update details</a></p>
 <p><a href="/logout">Logout</a></p>
