--- a/templates/base.html
+++ b/templates/base.html
@@ -27,13 +27,9 @@
 
     <title>YouthMap</title>
 
-    <!-- TODO CSS
-    <link rel="stylesheet" href="/css/style.css" type="text/css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link href="/fa/css/fontawesome.min.css" rel="stylesheet" />
-    <link href="/fa/css/solid.min.css" rel="stylesheet" />
-    -->
+    <link href="/css/style.css" rel="stylesheet" type="text/css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link href="https://unpkg.com/leaflet@2.0.0-alpha.1/dist/leaflet.css" rel="stylesheet" />
 
     <!-- TODO FAVICONS
     <link rel="icon" type="image/png" href="/img/icon-512.png">
@@ -44,15 +40,17 @@
     <link rel="alternate icon" type="image/x-icon" href="/favicon.ico">
     -->
 
-    <!-- TODO JS
-    -->
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </head>
 <body>
-<nav id="header">
-</nav>
-<main>
-    {% block content %}{% end %}
-</main>
+<div class="container">
+    <nav id="header">
+        <h1>Youth Map</h1>
+    </nav>
+    <main>
+        {% block content %}{% end %}
+    </main>
+</div>
 </body>
 </html>
